fix(mcp): enforce registry schema and atomic lifecycle contract (#9815)
Signed-off-by: Carles Arnal <carlesarnal92@gmail.com>